# Vending-Machine

./: CMakeLists.txt  INIT.bat  LICENSE  README.md  vending machine.cbp  vending machine.depend  vending machine.rar
LIB/: Products.cpp  Products.hpp  Read .txt  STD_TYPES.hpp
Machine/: Machine.cpp  Machine.hpp
Operation Mode/User Interface/: UI.cpp  UI.hpp
Programming Mode/addProducts/: addProducts.cpp  addProducts.hpp
SRC/: main.cpp
_GUI/: VendingMachineGUI.cpp  VendingMachineGUI.hpp
